fix: images z-index

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -32,7 +32,7 @@ section {
 
 img,
 video {
-  z-index: 100;
+  z-index: 0;
   max-width: unset;
 }
 
